--- a/package.json
+++ b/package.json
@@ -2,15 +2,36 @@
   "name": "linear-poa",
   "version": "0.1.0",
   "private": true,
+  "browser": {
+    "stream": "stream-browserify",
+    "http": "stream-http",
+    "https": "https-browserify",
+    "url": "url",
+    "zlib": "browserify-zlib",
+    "crypto": "crypto-browserify"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
+    "@linear/sdk": "^24.0.0",
+    "assert": "^2.1.0",
+    "autoprefixer": "^10",
+    "browserify-zlib": "^0.2.0",
     "core-js": "^3.8.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "postcss": "^8",
     "register-service-worker": "^1.7.2",
-    "vue": "^3.2.13"
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^3",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
+    "vue": "^3.2.13",
+    "vue-multiselect": "^3.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -26,6 +47,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.4.1",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-cli-plugin-tailwind": "~3.0.0"
   }
 }
