--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "assert": "^2.1.0",
     "autoprefixer": "^10",
     "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "core-js": "^3.8.3",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
     "postcss": "^8",
+    "process": "^0.11.10",
     "register-service-worker": "^1.7.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
